[package]
name = "tracing-serde-structured"
version = "0.1.0"
authors = ["James Munns <james@onevariable.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/jamesmunns/tracing-serde-structured"
homepage = "https://github.com/jamesmunns/tracing-serde-structured"
description = """
An alternative, structured, compatibility layer for serializing trace data with `serde`
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
    "encoding",
]
keywords = ["logging", "tracing", "serialization"]

[features]
default = ["std"]
std = ["serde/std", "tracing-core/std"]
# valuable = ["valuable_crate", "valuable-serde", "tracing-core/valuable"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = { version = "0.7.10", features = ["serde"] }
hash32 = "0.2.1"

[dependencies.tracing-core]
git = "https://github.com/tokio-rs/tracing"
branch = "master"
default-features = false

[dev-dependencies]
serde_json = "1"

# [target.'cfg(tracing_unstable)'.dependencies]
# valuable_crate = { package = "valuable", version = "0.1.0", optional = true, default_features = false }
# valuable-serde = { version = "0.1.0", optional = true, default_features = false }

[badges]
maintenance = { status = "experimental" }
