[package]
name = "tracing-serde-structured"
version = "0.2.0"
authors = ["James Munns <james@onevariable.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/jamesmunns/tracing-serde-structured"
homepage = "https://github.com/jamesmunns/tracing-serde-structured"
description = """
An alternative, structured, compatibility layer for serializing trace data with `serde`
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
    "encoding",
]
keywords = ["logging", "tracing", "serialization"]

[features]
default = ["std"]
std = ["serde/std", "tracing-core/std", "postcard?/use-std"]
valuable = ["valuable_crate", "valuable-serde", "tracing-core/valuable"]
postcard-schema = ["postcard"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
tracing-core = { version = "0.1.27", default-features = false}
heapless = { version = "0.7.10", features = ["serde"] }
hash32 = "0.2.1"

[dependencies.postcard]
version = "1.0.10"
features = ["experimental-derive"]
optional = true

[dev-dependencies]
serde_json = "1"

[target.'cfg(tracing_unstable)'.dependencies]
valuable_crate = { package = "valuable", version = "0.1.0", optional = true, default_features = false }
valuable-serde = { version = "0.1.0", optional = true, default_features = false }

[badges]
maintenance = { status = "experimental" }

[patch.crates-io]
# NOTE: basing this on https://github.com/jamesmunns/postcard/pull/170 which adds owned schemas
postcard = { git = "https://github.com/jamesmunns/postcard", rev = "8817efcc6f86e8abd19cf14dc3e0e1b466b0ab43" }
